css/maincss.css
@media (max-width: 767px){
  .form-group .makeinline{
    display: inline-block;
    width: 70vw;
  }

  .navbar .form-group,.navbar .nav-stacked {
    text-align: center;
  }

  .mobileallpadding{
    padding-left: 10%;
    padding-right: 10%;
  }
  .container-fluid>.navbar-header{
    margin-left: 0;
    margin-right: 0;
  }
  .container-fluid>.navbar-collapse{
    margin-left: 0;
    margin-right: 0;
  }
  .navbar-collapse .navbar-form{
    margin-left: 0;
    margin-right: 0;
  }

  .aligncenter{
  text-align: center;
}
}

.navbar .container .nav,nav.iamblack{
  background: black;
  color:white;
}

.navbar a:link{
	color: white;
}
.navbar a:hover{
	color: white;
}
.navbar a:active{
	color: green;
}
.navbar a:visited{
	color: white;
}

.nopadding{
  /*
  padding-left: 0;
  */
  padding-top: 20px;
  /*
  padding-right: 0;
  */
  background-color: white;
}
.fullwidth{
  width: 100%;
}
.navbar{
  margin-bottom: 0;
}
.shadow{
	 box-shadow: 0px 0px 10px #888888;
	 padding: 5%;
	 padding-top:1%;
   margin-top: 5%;
	 border-radius: 1%;
}
.pinktext{
	color: #df1750;
}
.margins{
	margin-left: 0;
	margin-top: 20px;
	margin-right: 20px;
	margin-bottom: 20px;
}
.rightAlign{
	text-align: right;
}

@media (min-width: 768px){
  .makeright{
    float: right;
  }

  .alignRight{
    text-align: right;
  }
  .overlapNegative{
		margin-top: -28%;
		background-color: white;
	}
  .mobilecenter{
    clear: both;
  }

  .pullright{
    float: right;
  }
  .pullleft{
    float: left;
  }
  .padding10{
    padding-right: 1vw;
  }

  .footermenu{
      width: 50%;
  }

  .navbar > .container-fluid .navbar-brand{
    margin-left: 0;
  }
  .navbar-form .form-control{
    width: 300px;
  }




}

.topmargin{
  border-top-width: 1px;
  border-color: #df1750;
  border-style: solid;
}

footer{
  padding-left: 15px;
  padding-right: 15px;
  margin-left: auto;
  margin-right: auto;
}

.padding10px{
  padding-top: 20px;
}

.clearfix{
  visibility: hidden;
  display: block;
  font-size: 0;
  content: " ";
  clear: both;
  height: 0;
}


footer a:link,a:hover,a:active,a:visited{
  color:black;
  text-decoration: none;
}

.rightAlign .btn{
  background-color:#df1750;
  padding: 0 10px;
  border-radius: 0;
  color: white;
}
.navbar-collapse{
  padding-right: 0;
  padding-left: 0;
}

.form-control:focus,.form-control{
  border-color: #df1750;
  box-shadow: none;
  border-radius: 0;
  border-width: 2px;
}
.navbar-form .form-group .btn {
  background-color: #df1750;
  border-radius: 0;
  padding-left: 20px;
  padding-right: 20px;
  color: white;
}

.navbar-brand .pinktext {
  font-family: 'Great Vibes', cursive;
  font-size: 2em;
}

.padding7px{
  padding-top: 10px;
}

@media (min-width: 768px) and (max-width: 991px) {
  .footerFixSetFontSizeTo10{
    font-size: 12px;
  }
}

.navbar-default .navbar-toggle{
  border: none;
}

